css/style.css
/* ... */
/* LOCATIONS */

.location-section {
  padding-bottom: 0;
}

/* FAQ */

.faq-list {
  margin-top: 0;
  color: var(--dark-gray-color);
  margin-bottom: 1.999em;
}

.faq-list a {
  color: var(--dark-gray-color);
}

.faq-question {
  font-weight: bold;
  margin-top: 1.999em;
}

/* CONTACT */

.contact-form {
  display: flex;
  flex-flow: column nowrap;
}

.contact-card {
  box-shadow: 0px 0px 20px 0px rgba(197,197,197,0.8);
  padding: 20px;
}

/* CERTIFICATIONS */
.cert-flex-group {
  display: flex;
  flex-flow: column wrap;
  align-items: center;
  margin-bottom: 80px;
  flex: 0 1 auto;
}

.cert-button {
  font-size: 1.2em;
}

.cert-img-box {
  border: 1px solid #ddd;
  width: 250px;
  height: 250px;
  display: flex;
}

.cert-img {
  width: 100%;
  align-self: center;
  padding: 20px;
}

